--- a/manifest.json
+++ b/manifest.json
@@ -9,11 +9,22 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
+  "background": {
+    "scripts": ["hot-reload.js", "innerPage.js"]
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content_script.js"]
+    }
+  ],
   "permissions": [
     "activeTab",
-    "storage"
+    "contextMenus",
+    "storage",
+    "tabs"
   ],
-  "background": {
-    "scripts": ["hot-reload.js"]
+  "icons": {
+    "16": "icon.png"
   }
 }
