--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "paste-it-logo.png",
     "default_popup": "popup.html"
   },
   "background": {
@@ -25,6 +25,6 @@
     "tabs"
   ],
   "icons": {
-    "16": "icon.png"
+    "16": "paste-it-logo.png"
   }
 }
